# my-docs

./: .gitignore  README.md  index.html  ops.sh  package-lock.json  package.json  setup.sh  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml
scripts/: check-frontend-budget.mjs  test-setup-mode-guards.sh
server/: Cargo.toml  backup.env.example  build.rs
server/src/: ai.rs  ai_client.rs  archive.rs  articles.rs  backup_policy.rs  backups.rs  day_exemptions.rs  db.rs  exports.rs  helpers.rs  knowledge.rs  main.rs  middleware.rs  models.rs  persistence_tests.rs  server.rs  stats.rs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src/components/: ArchivePage.tsx  ArticleDetail.tsx  HistoryPage.tsx  KnowledgePage.tsx  MarkdownContent.tsx  ReviewsPage.tsx  SearchPage.tsx  SettingsPage.tsx  Sidebar.tsx  StatsPage.tsx  TodayPage.tsx
src/components/reviews/: ReviewShared.tsx
src/components/settings/: AIPanel.tsx  BackupPanel.tsx  ConnectionPanel.tsx  ExportPanel.tsx  shared.tsx
src/components/ui/: Feedback.tsx
src/lib/: api.ts  apiHealth.test.ts  dailyRecordSession.test.ts  dailyRecordSession.ts  reviewContent.ts  reviewGeneration.test.ts  reviewGeneration.ts  statsSnapshot.test.ts  statsSnapshot.ts  tags.ts
